chore: Update initial Maven structure.
- Set up builds, plugins and dependencies.

--- a/lawn-mower/lawn-mower-core/pom.xml
+++ b/lawn-mower/lawn-mower-core/pom.xml
@@ -13,4 +13,26 @@
     <groupId>fr.mistertie.lawn-mower</groupId>
     <artifactId>lawn-mower-core</artifactId>
 
+    <build>
+        <sourceDirectory>src/main/scala</sourceDirectory>
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
