--- a/lawn-mower/lawn-mower-core/pom.xml
+++ b/lawn-mower/lawn-mower-core/pom.xml
@@ -21,6 +21,10 @@
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
