--- a/lawn-mower/pom.xml
+++ b/lawn-mower/pom.xml
@@ -11,9 +11,11 @@
 
     <modules>
         <module>lawn-mower-core</module>
+        <module>lawn-mower-test</module>
     </modules>
 
     <properties>
+        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala-library.version>2.11.1</scala-library.version>
@@ -42,6 +44,11 @@
                         </includes>
                         <scalaVersion>${scala-library.version}</scalaVersion>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
