chore: Add the parsing module. feature(parsing): Add readers and converters skeletons. feature(parsing): Add first Mower converter's implementation.

--- a/lawn-mower/pom.xml
+++ b/lawn-mower/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>lawn-mower-core</module>
+        <module>lawn-mower-parsing</module>
         <module>lawn-mower-test</module>
     </modules>
 
