chore: Add the CLI module.

--- a/lawn-mower/pom.xml
+++ b/lawn-mower/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>lawn-mower-cli</module>
         <module>lawn-mower-core</module>
         <module>lawn-mower-parsing</module>
         <module>lawn-mower-test</module>
