feature(cli): Add the arguments parser.

--- a/lawn-mower/lawn-mower-cli/pom.xml
+++ b/lawn-mower/lawn-mower-cli/pom.xml
@@ -43,7 +43,6 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
@@ -51,6 +50,10 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.scopt</groupId>
+            <artifactId>scopt_2.11</artifactId>
         </dependency>
     </dependencies>
 
