--- a/lawn-mower/lawn-mower-cli/pom.xml
+++ b/lawn-mower/lawn-mower-cli/pom.xml
@@ -27,29 +27,27 @@
     </build>
 
     <dependencies>
+
+        <!-- Internal -->
         <dependency>
             <groupId>fr.mistertie.lawnmower</groupId>
             <artifactId>lawn-mower-core</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>fr.mistertie.lawnmower</groupId>
             <artifactId>lawn-mower-parsing</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>fr.mistertie.lawnmower</groupId>
             <artifactId>lawn-mower-test</artifactId>
-            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- External -->
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.scopt</groupId>
