--- a/lawn-mower/lawn-mower-test/pom.xml
+++ b/lawn-mower/lawn-mower-test/pom.xml
@@ -26,13 +26,11 @@
     </build>
 
     <dependencies>
+
+        <!-- External -->
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
         </dependency>
     </dependencies>
 
