--- a/lawn-mower/lawn-mower-cli/pom.xml
+++ b/lawn-mower/lawn-mower-cli/pom.xml
@@ -16,6 +16,20 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathLayoutType>repository</classpathLayoutType>
+                            <classpathPrefix>${settings.localRepository}</classpathPrefix>
+                            <mainClass>fr.mistertie.lawnmower.cli.application.LawnMowerApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
             </plugin>
