--- a/lawn-mower/pom.xml
+++ b/lawn-mower/pom.xml
@@ -129,5 +129,37 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>skipIntegrationTests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.scalatest</groupId>
+                        <artifactId>scalatest-maven-plugin</artifactId>
+                        <version>${scalatest-maven-plugin.version}</version>
+                        <configuration>
+                            <tagsToExclude>fr.mistertie.lawnmower.test.tag.IntegrationTest</tagsToExclude>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
