--- a/lawn-mower/lawn-mower-cli/pom.xml
+++ b/lawn-mower/lawn-mower-cli/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>fr.mistertie.lawn-mower</groupId>
+    <groupId>fr.mistertie.lawnmower</groupId>
     <artifactId>lawn-mower-cli</artifactId>
     <packaging>jar</packaging>
 
