--- a/lawn-mower/pom.xml
+++ b/lawn-mower/pom.xml
@@ -18,8 +18,8 @@
 
     <properties>
         <java.target.version>1.6</java.target.version>
+        <maven-assembly-plugin.version>2.4.1</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <maven-jar-plugin.version>2.5</maven-jar-plugin.version>
         <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala-library.version>2.11.1</scala-library.version>
@@ -63,8 +63,8 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${maven-jar-plugin.version}</version>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven-assembly-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -141,7 +141,7 @@
             <artifactId>scalatest_2.11</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
     </dependencies>
 
     <profiles>
